; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/asn1/extr_a_strex.c_X509_NAME_print_ex_fp.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/asn1/extr_a_strex.c_X509_NAME_print_ex_fp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XN_FLAG_COMPAT = common dso_local global i64 0, align 8
@BIO_NOCLOSE = common dso_local global i32 0, align 4
@send_fp_chars = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @X509_NAME_print_ex_fp(i32* %0, i32* %1, i32 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  %12 = load i64, i64* %9, align 8
  %13 = load i64, i64* @XN_FLAG_COMPAT, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %30

15:                                               ; preds = %4
  %16 = load i32*, i32** %6, align 8
  %17 = load i32, i32* @BIO_NOCLOSE, align 4
  %18 = call i32* @BIO_new_fp(i32* %16, i32 %17)
  store i32* %18, i32** %10, align 8
  %19 = load i32*, i32** %10, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %15
  store i32 -1, i32* %5, align 4
  br label %37

22:                                               ; preds = %15
  %23 = load i32*, i32** %10, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @X509_NAME_print(i32* %23, i32* %24, i32 %25)
  store i32 %26, i32* %11, align 4
  %27 = load i32*, i32** %10, align 8
  %28 = call i32 @BIO_free(i32* %27)
  %29 = load i32, i32* %11, align 4
  store i32 %29, i32* %5, align 4
  br label %37

30:                                               ; preds = %4
  %31 = load i32, i32* @send_fp_chars, align 4
  %32 = load i32*, i32** %6, align 8
  %33 = load i32*, i32** %7, align 8
  %34 = load i32, i32* %8, align 4
  %35 = load i64, i64* %9, align 8
  %36 = call i32 @do_name_ex(i32 %31, i32* %32, i32* %33, i32 %34, i64 %35)
  store i32 %36, i32* %5, align 4
  br label %37

37:                                               ; preds = %30, %22, %21
  %38 = load i32, i32* %5, align 4
  ret i32 %38
}

declare dso_local i32* @BIO_new_fp(i32*, i32) #1

declare dso_local i32 @X509_NAME_print(i32*, i32*, i32) #1

declare dso_local i32 @BIO_free(i32*) #1

declare dso_local i32 @do_name_ex(i32, i32*, i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
